Bug 133005 - FILEOPEN XLSX Date axis with On tick marks setting imported incorrectly
Summary: FILEOPEN XLSX Date axis with On tick marks setting imported incorrectly
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: target:7.0.0
Keywords:
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2020-05-13 15:00 UTC by NISZ LibreOffice Team
Modified: 2023-10-05 09:33 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Excel (13.60 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2020-05-13 15:00 UTC, NISZ LibreOffice Team
Details
Screenshot of the original document side by side in Excel and Calc (108.04 KB, image/png)
2020-05-13 15:01 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-05-13 15:00:58 UTC
Created attachment 160760 [details]
Example file from Excel

Attached document contains a simple column chart with axis setting Axis position -> On tick marks.
When opened in Writer, this is imported as Between tick marks.

Steps to reproduce:
    1. Open attached document

Actual results:
Columns appear between the tickmarks.

Expected results:
Columns should appear on the tickmarks.

LibreOffice details:

Version: 7.0.0.0.alpha1+ (x64)
Build ID: f9790da286f2d2fa47f1748f8cfa6172c6622ca3
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win; 
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL
Comment 1 NISZ LibreOffice Team 2020-05-13 15:01:40 UTC
Created attachment 160761 [details]
Screenshot of the original document side by side in Excel and Calc
Comment 2 Commit Notification 2020-05-25 11:43:18 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ed2c880a691a0b179bbc92a8ce4ee49eac004035

tdf#133005 Chart: fix ODF import of date axis position

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.