tdf#133005 Chart: fix ODF import of date axis position

Chart with date axis setting "On tick marks" wasn't
imported correctly.

See commit 40d83914d43f60a196dfabddea0b52e2046b333a
(tdf#127792 implement UNO chart attribute MajorOrigin)

Change-Id: I5967c4bab8690df1f191b33ecb0e5b043bca68a9